# gestion-practicas-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/core/: config.py  database.py
app/core/assets/: presentation_letter_template.docx
app/core/database/: database.py  init.sql
app/core/logging/: json_formatter.py  logging.py  logging_config.json
app/modules/admin/: __init__.py
app/modules/audit/: __init__.py
app/modules/data_portability/: __init__.py
app/modules/internships/: __init__.py
app/modules/presentation_letters/: __init__.py
app/modules/self_evaluations/: __init__.py
app/modules/supervisor_evaluations/: __init__.py
database/: init.sql
docs/: admin.md  api-contracts.md  business_rules.md  convencion-insomnia.md  database-naming-plan.md  database-naming.md  development-standards.md  documents-privacy.md  logging.md  notifications.md
scripts/: run_load_test.ps1  seed_demo.py
tests/: test_database.py
tests/e2e/: conftest.py  test_auth_e2e.py  test_documents_e2e.py  test_internships_e2e.py  test_notifications_e2e.py
tests/load/: README.md  admin_dashboard.js
tests/modules/admin/: admin_test.yaml  test_admin_report_service.py  test_admin_router.py  test_admin_service.py
tests/modules/audit/: test_audit_service.py
tests/modules/auth/: auth_endpoints_test.yaml  conftest.py  test_auth_dependency.py  test_auth_router.py  test_auth_service.py  test_enrollment.py  test_google_oauth_service.py  test_normalization.py  test_password_service.py  test_rbac_roles.py  test_refresh_token_repository.py  test_role_dependency.py  (+7 more)
(+180 files in other folders)
