[project]
name = "gestion-practicas-backend"
version = "0.1.0"
description = "Repositorio backend para Sistema Gestor de Prácticas UFRO-DCI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
