[project]
name = "gestion-practicas-backend"
version = "0.1.0"
description = "Repositorio backend para Sistema Gestor de Prácticas UFRO-DCI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chardet>=7.4.3",
    "fastapi>=0.136.1",
    "pwdlib>=0.3.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "argon2-cffi>=25.1.0",
    "email-validator>=2.3.0",
    "fastapi-mail>=1.6.4",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
